correct responsive collapse menu & styles

--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,18 @@ button:focus{
 }
 
 .sidebar{
-    height: 100vh;
+    height: auto;
     background-color: #363740;
     padding: 0;
     min-width: 220px;
 }
 
+.side-menu{
+    height: auto;
+}
+
 .logo-info{
-    padding: 30px 0px 40px 30px;
+    padding: 30px 0px 30px 30px;
 }
 
 .logo-info > h5{
